prometheus/overlays/monitoring/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-svc
  namespace: monitoring
spec:
  ports:
  - name: web
    port: 80
    targetPort: web
  selector:
    app.kubernetes.io/name: prometheus
  sessionAffinity: None
  type: ClusterIP
