prometheus/overlays/monitoring/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/instance: k8s
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: kube-prometheus
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
    cert-manager.io/issuer: "cluster-issuer-selfsigned" 
    cert-manager.io/issuer-kind: "ClusterIssuer"
    metallb.uniberse.tf/address-pool: default
    prometheus.io/scrape: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.k3s  
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus-k8s
              port:
                number: 9090  
  tls:
    - hosts:
        - prometheus.k3s 
      secretName: prometheus.k3s.cloud-tls
